fix the overlaping error

--- a/style.css
+++ b/style.css
@@ -99,6 +99,12 @@ ul {
   padding: 0;
 }
 
+.about-social {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
 .social-media ul {
   margin: 0;
   padding: 0;
@@ -108,6 +114,7 @@ ul {
 
 .social-media ul li {
   list-style: none;
+  display: flex;
 }
 
 .social-media-text {
@@ -195,6 +202,21 @@ img {
 }
 
 .work {
+  display: flex;
+  flex-direction: column;
+  order: 3;
+  width: 345px;
+  height: 596px;
+  padding: 16px;
+  margin: 25px 24px;
+  border-radius: 16px;
+  border: 1px solid #dfe1e6;
+  box-sizing: border-box;
+  background-color: #fff;
+  justify-content: center;
+}
+
+.uber-navig {
   display: flex;
   flex-direction: column;
   width: 345px;
